# ingl

./: .env  .env.example  .gitignore  Cargo.toml  README.md  data.json  netlify.toml  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
apps/app/: project.json  tsconfig.json
apps/app/src/: app.tsx  index.html  main.tsx  styles.css
apps/app/src/common/utils/: notification.tsx
apps/app/src/components/: Test.tsx
apps/app/src/components/dao/: DaoGems.tsx  ProposalNumber.tsx  ProposalSelectionMenu.tsx  ValidatorLIne.tsx  VoteDialog.tsx  index.tsx  inglNumber.tsx
apps/app/src/components/layout/: ConnectButton.tsx  Footer.tsx  Links.tsx  NavItem.tsx  Navbar.tsx  SectionTitle.tsx  dialect.css  index.tsx
apps/app/src/components/nftDisplay/: ActionDialog.tsx  Gem.tsx  MintGemDialog.tsx  SelectValidatorDialog.tsx  ValidatorCard.tsx  index.tsx
apps/app/src/components/wallet/: FinanceLine.tsx  NftRow.tsx  TableHead.tsx  index.tsx
apps/app/src/contexts/language/: LanguageContextProvider.tsx
apps/app/src/languages/en-us/: website.ts
apps/app/src/routes/: routes.tsx
apps/app/src/services/: nft.service.ts  state.ts  utils.ts  validator-dao.service.ts
apps/app/src/theme/: theme.ts
apps/landing/: jest.config.ts  project.json
apps/landing/src/: styles.css
apps/landing/src/app/: app.spec.tsx  app.tsx
apps/landing/src/components/: DaoSection.tsx  Faqs.tsx  Footer.tsx  HeroSection.tsx  Links.tsx  NavItem.tsx  Navbar.tsx  Question.tsx  SectionCard.tsx  SectionTitle.tsx  Team.tsx  Test.tsx  UserCard.tsx
apps/notifyer/: jest.config.ts  project.json
apps/notifyer/src/app/: app.service.ts  notifyer-data.json
libs/client-state/: README.md  jest.config.ts  project.json
libs/client-state/src/lib/: client-state.spec.ts  client-state.ts
libs/dialect-sdk/: README.md  jest.config.ts  project.json
libs/dialect-sdk/src/: index.ts
libs/dialect-sdk/src/lib/: dialect-sdk.spec.ts  dialect-sdk.ts
libs/ingl-dao/: Cargo.toml
libs/ingl-dao/client/: createRealm.ts  package-lock.json  package.json
libs/ingl-dao/client/utils/: helpers.ts  sendTransactions.ts  state.ts
libs/ingl-dao/client/utils/plugin/: accounts.ts  useVotingPlugins.ts
libs/ingl-dao/src/: instruction.rs  lib.rs  processor.rs  state.rs
libs/program/: Cargo.toml  project.json
libs/program/python/: airdrop.ipynb  alllocate.ipynb  close_proposal.ipynb  create_collection.ipynb  create_validator_proposal.ipynb  create_vote_account.ipynb  deallocate.ipynb  delegate_nft.ipynb  finalize_proposal.ipynb  finalize_rebalance.ipynb  ingl_cli.py  init_rebalance.ipynb  inject_testing_data.ipynb  instruction.py  mint_nft.ipynb  nft_withdraw.ipynb  process_rewards.ipynb  processor.py  register_validator.ipynb  setup.py  state.py  summercamp-submission.json  undelegate_nft.ipynb  upload_data_arweave.ipynb  uploaded_images.json  validator-keypair.json  vote_proposal.ipynb
libs/program/python/ingl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
libs/program/python/~/: validator-keypair.json
libs/program/src/: error.rs  instruction.rs  lib.rs  nfts.rs  processor.rs  state.rs  utils.rs
